added MinMaxLazy, Select, LoginPassword

--- a/sky-react-hw1/src/App.css
+++ b/sky-react-hw1/src/App.css
@@ -144,3 +144,56 @@
 .Total {
   text-align: initial;
 }
+
+.Select {
+  width: 220px;
+  height: 30px;
+  background: #FFFFFF;
+  border-radius: 4px;
+  border-color: #004980;
+  border-width: thin;
+  font-size: 15px;
+  color: #004980;
+  padding-left: 10px;
+}
+
+.FormSignIn {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 30px;
+}
+
+.Inputs {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.Input {
+  width: 200px;
+  height: 35px;
+  border: 1px solid rgb(153, 153, 153);
+  border-radius: 4px;
+  font-size: 15px;
+  padding: 0px 15px;
+  margin-top: 20px;
+}
+
+.ButtonForm {
+  width: 230px;
+  height: 38px;
+  background-color: rgb(60, 65, 180);
+  color: white;
+  border: 1px solid rgb(153, 153, 153);
+  border-radius: 4px;
+  font-size: 18px;
+  padding: 0px 15px;
+  margin-top: 30px;
+  margin-bottom: 20px;
+}
+
+.Error {
+  color: red;
+  font-size: 14px;
+}
